# TDQC-Phase-One-Project

./: .gitignore  CMakeLists.txt  README.md
include/: stack_adt.h
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  executable.c
src/stack/: CMakeLists.txt  stack_adt.c
tests/: CMakeLists.txt  stack_gtest.cpp
